--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>ER Diagram</title>
     <style>
         #er-diagram {
-            width: 100%;
-            height: 800px;
-            border: 1px solid lightgray;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin: 0;
+            height: 95vh;
+            box-sizing: border-box;
         }
 
         form {
@@ -58,13 +62,14 @@
                 }
             },
             edges: {
-                physics: false,
                 color: '#848484',
                 arrows: 'to',
                 smooth: {
-                    enabled: true,
-                    type: 'dynamic'
+                    enabled: false,
                 }
+            },
+            physics: {
+                enabled: false,
             }
         };
 
